corrected bootstrap tags for background and text align for header

--- a/output/style.css
+++ b/output/style.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
     --bs-blue: #0d6efd;
     --bs-indigo: #6610f2;
     --bs-red: #dc3545;
@@ -19,6 +19,6 @@
 };
 
 header {
-    background-color: var(--bs-cyan);
+    background-color: black;
     text-align: center;
-};
+}; */
